--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260691-senior-frontend-developer-w-m-d-'>brandung GmbH & Co. KG Senior Frontend Developer (w/m/d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698261654-frontend-entwickler-typo3-w-m-d-'>brandung GmbH & Co. KG Frontend Entwickler - TYPO3 (w/m/d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -82,7 +90,7 @@
 <p><span class="badge badge-light">Charlotte, NC  Charlotte</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -144,7 +152,7 @@
 <p><span class="badge badge-light">California  Pleasanton, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finanzchef24.join.com/jobs/466362-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
+<h5><a href='https://finanzchef24.join.com/jobs/466362-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -196,7 +204,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324371/front-end-web-developer'>Front-end Web Developer | WorkNOLA</a></h5> 
+<h5><a href='https://worknola.com/job/324371/front-end-web-developer'>Front-end Web Developer | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -204,7 +212,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tipico/743999698286014-senior-front-end-developer-m-f-x-'>Tipico Senior Front-End Developer (m/f/x) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tipico/743999698286014-senior-front-end-developer-m-f-x-'>Tipico Senior Front-End Developer (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">St Julian's, Malta</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -230,7 +238,7 @@
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chimpy.join.com/jobs/456657-front-end-engineer-who-loves-ux-ui-react-react-native-js'>Job @ Chimpy (Z?rich): Front-end engineer who love... | JOIN</a></h5> 
+<h5><a href='https://chimpy.join.com/jobs/456657-front-end-engineer-who-loves-ux-ui-react-react-native-js'>Job @ Chimpy (Z?rich): Front-end engineer who love... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -250,7 +258,7 @@ Frontend Engineer (m/f/d) at XAIN AG in Berlin | React jobs | 42jobs.io
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584447'>Stellenangebot: Frontend Developer ? Typo3 (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584447'>Stellenangebot: Frontend Developer ? Typo3 (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -276,7 +284,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -296,7 +304,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/pwgwyq1dysbnb9ipfwpn7ut36e'>Director of Front End Engineering  | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/pwgwyq1dysbnb9ipfwpn7ut36e'>Director of Front End Engineering  | Averity</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -312,7 +320,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241490-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241490-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -368,7 +376,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4463118002'>Job Application for Frontend Engineer - Warsaw at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4463118002'>Job Application for Frontend Engineer - Warsaw at Glovo</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw  Warsaw, Poland  Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -418,7 +426,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://homeday.join.com/jobs/448364-senior-frontend-engineer-m-w-x'>Job @ Homeday (Berlin): (Senior) Frontend Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://homeday.join.com/jobs/448364-senior-frontend-engineer-m-w-x'>Job @ Homeday (Berlin): (Senior) Frontend Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -442,21 +450,9 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://avency.join.com/jobs/459628-frontend-developer-m-w-d'>Job @ avency (Telgte): Frontend Developer (m/w/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avency.join.com/jobs/459628-frontend-developer-m-w-d'>Job @ avency (Telgte): Frontend Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://vagasdb1.recruiterbox.com/jobs/fk0j2cl'>
-    Desenvolvedor (a) Frontend at DB1 Group
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
-	Front-End Web Designer/Developer - HellermannTyton - Big Shoes Network, Inc.
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-27</p>
 <hr/>
 
 
