--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698368790-project-manager-future-mobility'>Bosch Group Project Manager - Future Mobility | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698368648-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://cbre.referrals.selectminds.com/CBREGRTbQy'>Sr Project Manager - CBRE Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://www.sigmarrecruitment.com/job/quality-systems-project-manager-4/'>Quality Systems Project Manager | Ref  JPQSPROJA - Sigmar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -100,7 +112,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oNfs7fwl&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=nksWmMwl'>Zensar Technologies Careers - Project Manager-Agile</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oNfs7fwl&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=nksWmMwl'>Zensar Technologies Careers - Project Manager-Agile</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -182,7 +194,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/caminar/job/oqLqbfww'>Caminar Careers - Clinical Program Manager, Substance Use</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/caminar/job/oqLqbfww'>Caminar Careers - Clinical Program Manager, Substance Use</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -228,7 +240,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wtw.referrals.selectminds.com/jobs/project-manager-business-delivery-solutions-11993'>Project Manager - Business Delivery Solutions - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://wtw.referrals.selectminds.com/jobs/project-manager-business-delivery-solutions-11993'>Project Manager - Business Delivery Solutions - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -260,7 +272,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -322,7 +334,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -378,7 +390,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/program-manager-70063'>Program Manager - Medtronic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/program-manager-70063'>Program Manager - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -388,7 +400,7 @@ Construction Project Manager - CAPEX in Coral Springs, from Custom Executive Sea
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.themuse.com/jobs/mattel/sr-project-manager-it?utm_source=twitter&utm_medium=social&utm_campaign=twjobs_mattel_11859_october2019'>
+<h5><a href='https://www.themuse.com/jobs/mattel/sr-project-manager-it?utm_source=twitter&utm_medium=social&utm_campaign=twjobs_mattel_11859_october2019'>
 
 Sr Project Manager IT | El Segundo, CA | Mattel
 
@@ -447,18 +459,6 @@ Manager to plan, drive and execute in-person premium multi-track events under?..
 <hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/CBRElwMbPh'>Senior Project Manager - Commercial Construction - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">Sunnyvale United States</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://teampsc.applicantpro.com/jobs/1215201.html'>Civil Engineer - Project Manager - Aviation (Any Established PSC Location) - TX - Parkhill, Smith, &amp; Cooper, Inc. Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o08rbfwu&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nrDcmMwT'>NICE Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois  Minneapolis, Minnesota  Chicago Minneapolis</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://www.asd-usa.com/careers/security-project-manager/?utm_campaign=Hiring&utm_content=102223098&utm_medium=social&utm_source=twitter&hss_channel=tw-18273680'>Security Project Manager | ASD - Automated Systems Design</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 
